[tool.poetry]
name = "csvconf8"
version = "0.1.0"
description = "Repositorio de sesión sobre NLP en la csv,conf,v8"
authors = ["Fer Aguirre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.0.3"
nbformat = "^5.1.3"
pandas = "^1.3.0"
numpy = "^1.21.0"
requests = "^2.26.0"
plotly = "^5.3.1"
openpyxl = "^3.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
